--- a/apps/frontend/src/styles/fonts.css
+++ b/apps/frontend/src/styles/fonts.css
@@ -13,3 +13,11 @@
     font-style: normal;
     font-display: swap;
 } 
+
+@font-face {
+    font-family: 'Stick';
+    src: url('/fonts/Stick/Stick-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+} 
