added bucket support, created cards now upload to bucket per user

--- a/apps/frontend/src/pages/create-card.astro
+++ b/apps/frontend/src/pages/create-card.astro
@@ -9,7 +9,7 @@ import CardPreview from '../components/CardPreview';
 		<div class="form-container">
 			<CardForm client:load />
 		</div>
-		<div class="preview-container">
+		<div class="preview-container" id="cardPreviewContainer">
 			<CardPreview client:load cardData={{
 				name: '',
 				chessPieceType: '',
